--- a/src/app/Components/booking/booking.component.html
+++ b/src/app/Components/booking/booking.component.html
@@ -265,7 +265,7 @@
 
 
           <div class="d-none " id="printDiv">
-            <div class="text-end ">{{lblVoucherPrintDate |date:'short'}}</div>
+            <!-- <div class="text-end ">{{lblVoucherPrintDate |date:'short'}}</div> -->
             <div class="mt-2">
                 
                 <!-------------------------    Top Logo Section -------------------->
