--- a/src/app/Components/budgetting/budgetting.component.html
+++ b/src/app/Components/budgetting/budgetting.component.html
@@ -84,8 +84,8 @@
 
                         </mat-form-field>
 
-                          <button class="btn btn-primary mt-4" (click)="SaveBudget()">{{btnText}}</button>
-                          <button class="btn btn-danger mt-4" (click)="reset()">Reset</button>
+                          <button class="btn btn-success btn-save mt-4" (click)="SaveBudget()">{{btnText}}</button>
+                          <button class="btn btn-danger btn-reset mt-4" (click)="reset()">Reset</button>
 
                     </mat-card>
                 </div>
