--- a/src/app/Components/check-inout/addcheck-inservice/addcheck-inservice.component.html
+++ b/src/app/Components/check-inout/addcheck-inservice/addcheck-inservice.component.html
@@ -40,8 +40,8 @@
             
           </mat-form-field>
 
-          <div class="text-center"><button class="btn btn-success btn-rpt me-2" (click)="addService()">Save</button>
-            <button class="btn btn-danger btn-rpt" (click)="reset()">Reset</button></div>
+          <div class="text-center"><button class="btn btn-success btn-save  me-2" (click)="addService()">Save</button>
+            <button class="btn btn-danger btn-reset " (click)="reset()">Reset</button></div>
 
     </div>
     <hr>
