--- a/src/app/Components/check-inout/cio-details/cio-details.component.html
+++ b/src/app/Components/check-inout/cio-details/cio-details.component.html
@@ -19,12 +19,12 @@
         </span>
 
         <span class="w-50 row ">
-            <h5 class="w-50 fw-bold border-dark">Arrival Date:</h5>
+            <h5 class="w-50 fw-bold border-dark">Check In Date:</h5>
             <p class="w-50">{{lblArrivalDate | date:'short'}}</p>
         </span>
 
         <span class="w-50 row ">
-            <h5 class="w-50 fw-bold border-dark">Departure Date:</h5>
+            <h5 class="w-50 fw-bold border-dark">Check Out Date:</h5>
             <p class="w-50">{{lblDepartureDate | date:'short'}}</p>
         </span>
 
