--- a/src/app/Components/coaform/update-coa/update-coa.component.html
+++ b/src/app/Components/coaform/update-coa/update-coa.component.html
@@ -15,8 +15,8 @@
 
 
     <div class="text-center" >
-        <button  class="btn btn-primary me-2" (click)="UpdateChartofAccount()">Update</button>
-        <button  class="btn btn-danger" (click)="closeDialogue()">Close</button>
+        <button  class="btn btn-primary btn-save me-2" (click)="UpdateChartofAccount()">Update</button>
+        <button  class="btn btn-danger btn-reset" (click)="closeDialogue()">Close</button>
     </div>
 
 </div>
