--- a/src/app/Components/settings/service/add-service/add-service.component.html
+++ b/src/app/Components/settings/service/add-service/add-service.component.html
@@ -25,9 +25,9 @@
 
     </div>
     <div class="justify-content-center d-flex">
-        <button class="btn btn-success m-1" accesskey="s" (click)="addService()" ><mat-icon class="pt-1">save</mat-icon>
+        <button class="btn btn-success btn-save m-1" accesskey="s" (click)="addService()" ><mat-icon class="pt-1">save</mat-icon>
             {{actionbtn}} </button>
-        <button class="btn btn-danger m-1 " (click)="reset()"><mat-icon class="pt-1">cached</mat-icon> Reset </button>
+        <button class="btn btn-danger btn-reset m-1 " (click)="reset()"><mat-icon class="pt-1">cached</mat-icon> Reset </button>
     </div>
 </div>
 
