--- a/src/app/Components/voucher-supervision/voucher-supervision.component.html
+++ b/src/app/Components/voucher-supervision/voucher-supervision.component.html
@@ -150,10 +150,10 @@
                         width="100">
                 </span>
                 <span class="mt-3">
-                    <h3>{{CompanyName}}</h3>
-                        <p class="text-end w-75" style="margin-top: -15;">{{CompanyName2}}</p>
+                    <h3 class="companyName">{{CompanyName}}</h3>
+                        <p class="companyName2" style="margin-top: -15;">{{CompanyName2}}</p>
                     <p style="margin-top: -20;">{{companyAddress}}</p>
-                    <p style="margin-top: -15;">{{companyPhone}} , {{companyMobileno}}</p>
+                    <p style="margin-top: -15;">{{companyPhone}}  {{companyMobileno}}</p>
                     <p style="margin-top: -15;">{{companyEmail}}</p>
                 </span>
                 <span>
