--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<body class="container-fluid h-100 " >
+<div class="container-fluid h-100 body "  >
     <div class="box">
         <span class="borderline"></span>
     
@@ -31,4 +31,4 @@
     </form>
     
     </div>
-</body>
+</div>
