--- a/src/app/Components/add-user/add-user.component.html
+++ b/src/app/Components/add-user/add-user.component.html
@@ -69,8 +69,8 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <Button class="btn btn-success m-2 w-25 h-25" (click)="addUser()"><mat-icon class="pt-1" >save</mat-icon>{{btntype}}</Button>
-            <Button class="btn btn-danger m-2 w-25 h-25" (click)="reset()"><mat-icon class="pt-1" >cached</mat-icon>Reset</Button>
+            <Button class="btn btn-success btn-save m-2 w-25 h-25" (click)="addUser()"><mat-icon class="pt-1" >save</mat-icon>{{btntype}}</Button>
+            <Button class="btn btn-danger btn-reset m-2 w-25 h-25" (click)="reset()"><mat-icon class="pt-1" >cached</mat-icon>Reset</Button>
         </div>
 
 
