--- a/src/app/Components/coaform/coaform.component.html
+++ b/src/app/Components/coaform/coaform.component.html
@@ -147,10 +147,10 @@
             <!-- Save And Reset Button -->
             <br><br>
             <div class=" text-center">
-                <button class="btn btn-success col-md-1 ml-10" (click)="Save()">{{actionbtn}}</button>
+                <button class="btn btn-success btn-save col-md-1 ml-10" (click)="Save()">{{actionbtn}}</button>
     
     
-                <button class="btn btn-danger col-md-1 ml-10" (click)="reset()" >Reset</button>
+                <button class="btn btn-danger btn-reset col-md-1 ml-10" (click)="reset()" >Reset</button>
             </div>
               </mat-card>
                
