--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -5,17 +5,17 @@
         <div class=" col-lg-3 p-4" >
             <mat-card class="shadow rounded card-height" style="background-color: rgb(255, 253, 251); border-bottom: 3px solid rgb(167, 43, 163); ">
                 <div class="mt-2 text-center">
-                    <h3 class=" fw-bold" style="color: rgb(167, 43, 163);"> TOTAL SHOPS</h3>
+                    <h3 class=" fw-bold" style="color: rgb(167, 43, 163);"> TOTAL ROOMS</h3>
                 </div>
                 <div class="d-flex justify-content-around ">
                     <span  >
                        
-                            <mat-icon style="color: rgb(167, 43, 163);" >store_mall_directory</mat-icon>
+                            <mat-icon style="color: rgb(167, 43, 163);" >meeting_room</mat-icon>
                           
                         
                     </span>
                     <span class="mt-2" >
-                        <h1 style="color: rgb(167, 43, 163);" class="  digitalFont border-dark">{{item.totalShops}}</h1>
+                        <h1 style="color: rgb(167, 43, 163);" class="  digitalFont border-dark">{{item.totalRooms}}</h1>
                     </span>
                 </div>
 
@@ -27,14 +27,14 @@
         <div class=" col-lg-3 p-4" >
             <mat-card class="shadow rounded card-height" style="background-color: rgb(255, 255, 255); border-bottom: 3px solid rgb(255, 128, 1);">
                 <div class="mt-2 text-center">
-                    <h3 class=" fw-bold" style="color: rgba(255, 128, 0, 0.893);">SHOPS ON RENT</h3>
+                    <h3 class=" fw-bold" style="color: rgba(255, 128, 0, 0.893);">CHECKED IN ROOMS </h3>
                 </div>
                 <div class="d-flex justify-content-around ">
                     <span >
-                        <mat-icon style="color: rgba(255, 128, 0, 0.893);" >store_mall_directory</mat-icon>
+                        <mat-icon style="color: rgba(255, 128, 0, 0.893);" >hotel</mat-icon>
                     </span>
                     <span  class="mt-2">
-                        <h1 style="color: rgb(255, 128, 1);" class="digitalFont  border-dark">{{item.mappedShops}}</h1>
+                        <h1 style="color: rgb(255, 128, 1);" class="digitalFont  border-dark">{{item.mappedRooms}}</h1>
                     </span>
                 </div>
 
