--- a/src/app/Components/party/party.component.html
+++ b/src/app/Components/party/party.component.html
@@ -58,8 +58,8 @@
         </div>
 
        <div class="d-flex justify-content-center">
-        <Button class="btn btn-success m-2 w-25" (click)="saveParty()">{{btnType}}</Button>
-        <Button class="btn btn-danger m-2 w-25" (click)="reset()">Reset</Button>
+        <Button class="btn btn-success btn-save m-2 w-25" (click)="saveParty()">{{btnType}}</Button>
+        <Button class="btn btn-danger btn-reset m-2 w-25" (click)="reset()">Reset</Button>
        </div>
     </div>
 
