--- a/src/app/Components/settings/coa-notes/add-note/add-note.component.html
+++ b/src/app/Components/settings/coa-notes/add-note/add-note.component.html
@@ -23,7 +23,7 @@
         
     </div>
     <div class="justify-content-center d-flex" >
-        <button class="btn btn-success m-1" (click)="Save()"><mat-icon class="pt-1" >save</mat-icon> {{actionbtn}} </button>
-        <button class="btn btn-danger m-1 " (click)="reset()"><mat-icon class="pt-1">cached</mat-icon> Reset </button>
+        <button class="btn btn-success btn-save m-1" (click)="Save()"><mat-icon class="pt-1" >save</mat-icon> {{actionbtn}} </button>
+        <button class="btn btn-danger btn-reset m-1 " (click)="reset()"><mat-icon class="pt-1">cached</mat-icon> Reset </button>
     </div>
 </div>
