--- a/src/app/Reports/booking-rpt-date-wise/booking-rpt-date-wise.component.html
+++ b/src/app/Reports/booking-rpt-date-wise/booking-rpt-date-wise.component.html
@@ -30,10 +30,10 @@
             
 
             <div class="col-lg-1 text-end">
-                <button class="fw-bold btn btn-success btn-rpt" (click)="getReport()">Get Rpt</button>   
+                <button class=" btn btn-success btn-rpt" (click)="getReport()">Get Rpt</button>   
             </div>
             <div class="col-lg-1  text-end">
-                <button class="fw-bold btn btn-primary btn-rpt" (click)="print()"> Print</button>
+                <button class=" btn btn-primary btn-rpt" (click)="print()"> Print</button>
             </div>
         </div>
 
@@ -44,24 +44,22 @@
            <div class="hide">
             <div class="text-center border-bottom d-flex justify-content-between">
                 <span>
-                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100"
-                        width="100">
+                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100" width="100">
                 </span>
-                <span class="mt-3">
+                <span>
                     
 
-                    <h1 >{{CompanyName}}</h1>
-                    <h5 style="margin-top: -15px;" class="text-end">{{CompanyName2}}</h5>
+                    <h1 class="companyName" >{{CompanyName}}</h1>
+                    <p style="margin-top: -15px;" class="companyName2">{{CompanyName2}}</p>
 
-                    <h1>Booking Report {{bookingType}}</h1>
+                    <p class="rptTitle" style="margin-top:-25px">Booking Report {{bookingType}}</p>
                    
-                    <h4 style="margin-top:-5px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</h4>
+                    <p style="margin-top:-15px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</p>
                   
                 </span>
                 
                 <span>
-                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
-                        width="100">
+                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100" width="100 ">
                 </span>
         
         
