--- a/src/app/Reports/budget-report/budget-report.component.html
+++ b/src/app/Reports/budget-report/budget-report.component.html
@@ -12,15 +12,8 @@
 
 
         <div class="w-50  text-center">
-            <button class="fw-bold btn btn-success border-0 justify-content-bottom   " (click)="getReport()">
-                <mat-icon>insert_drive_file</mat-icon>Get Report
-            </button>
-
-          
-
-            <button class="fw-bold btn  btn-primary border-0 ms-5 justify-content-bottom" (click)="PrintTable()">
-                <mat-icon>print</mat-icon>Print
-            </button>
+            <button class=" btn btn-success btn-rpt w-25 me-2       " (click)="getReport()">Get Report</button>
+            <button class=" btn  btn-primary btn-rpt " (click)="PrintTable()">Print</button>
         </div>
     </div>
 
@@ -31,22 +24,20 @@
         <div class="hide">
             <div class="text-center  d-flex justify-content-between">
                 <span>
-                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="150"
-                        width="150">
+                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100" width="100">
                 </span>
-                <span class="mt-3">
+                <span >
                     
     
-                    <h1>{{CompanyName}}</h1>
-                    <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
+                    <h1 class="companyName" >{{CompanyName}}</h1>
+                    <p style="margin-top: -15px;" class="companyName2">{{CompanyName2}}</p>
     
-                    <h1>Monthly Budget Report</h1>
-                    <h4 style="margin-top:-5px"><b>For Month:</b> {{budgetMonth | date:'yyyy-MM'}} </h4>
+                    <p class="rptTitle" style="margin-top:-25px">Monthly Budget Report</p>
+                    <p style="margin-top:-20px"><b>For Month:</b> {{budgetMonth | date:'yyyy-MM'}} </p>
                   
                 </span>
                 <span>
-                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="150"
-                        width="150">
+                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"width="100">
                 </span>
         
         
