--- a/src/app/Reports/cashbook/cashbook.component.html
+++ b/src/app/Reports/cashbook/cashbook.component.html
@@ -20,15 +20,9 @@
 
 
     <div class="w-25 text-end" >
-        <button class="fw-bold btn btn-primary me-3 btn-rpt" (click)="getDetailReport()">
-           Get Detail
-        </button>
-        <button class="fw-bold btn btn-primary me-3 btn-rpt" (click)="getSummary()">
-            Get Summary
-         </button>
-        <button class="fw-bold btn btn-primary btn-rpt" (click)="print()">
-           Print
-        </button>
+        <button class=" btn btn-success   me-1 btn-rpt" (click)="getDetailReport()"> Get Detail </button>
+        <button class=" btn btn-primary  me-1 btn-rpt" style="width: 150px;" (click)="getSummary()">Get Summary </button>
+        <button class=" btn btn-primary  btn-rpt" (click)="print()"> Print</button>
     </div>
 </div>
 <div class="container" id="printRpt">
@@ -38,23 +32,21 @@
      <div class="hide">
         <div class="text-center border-bottom d-flex justify-content-between">
             <span>
-                <img src="{{logo}}" style="color: black;" alt="" srcset="" height="150"
-                    width="150">
+                <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100" width="100">
             </span>
-            <span class="mt-3">
+            <span >
                 
 
-                <h1>{{CompanyName}}</h1>
-                <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
+                <h1 class="companyName">{{CompanyName}}</h1>
+                <p style="margin-top: -15px;" class="companyName2">{{CompanyName2}}</p>
 
                 
-                <h1 style="margin-top:-15px">Cash Book</h1>
-                <h4 style="margin-top:-5px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</h4>
+                <p class="rptTitle" style="margin-top:-25px">Cash Book</p>
+                <p style="margin-top:-20px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</p>
               
             </span>
             <span>
-                <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="150"
-                    width="150">
+                <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100" width="100">
             </span>
     
     
