--- a/src/app/Reports/cio-rpt-type-datewise/cio-rpt-type-datewise.component.html
+++ b/src/app/Reports/cio-rpt-type-datewise/cio-rpt-type-datewise.component.html
@@ -2,7 +2,7 @@
     <!----------------           Date Section ------------------------------->
     <div class="row  p-2">
 
-        <mat-form-field class="col-lg-4 " appearance="outline">
+        <mat-form-field class="col-lg-6 " appearance="outline">
             <mat-label>Select Type</mat-label>
             <mat-select [(ngModel)]="voucherType">
                 <mat-option *ngFor="let item of Types" [value]="item.title">{{item.title}}</mat-option>
@@ -26,10 +26,10 @@
 
 
         <div class="col-lg-1 text-end">
-            <button class="fw-bold btn btn-success btn-rpt" (click)="getReport()">Get Rpt</button>
+            <button class=" btn btn-success btn-rpt" (click)="getReport()">Get Rpt</button>
         </div>
         <div class="col-lg-1  text-end">
-            <button class="fw-bold btn btn-primary btn-rpt" (click)="print()"> Print</button>
+            <button class=" btn btn-primary btn-rpt" (click)="print()"> Print</button>
         </div>
     </div>
 
@@ -43,15 +43,13 @@
                 <span>
                     <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100" width="100">
                 </span>
-                <span class="mt-3">
+                <span>
                     
 
-                    <h1 >{{CompanyName}}</h1>
-                    <h5 style="margin-top: -15px;" class="text-end">{{CompanyName2}}</h5>
-
-                    <h1> {{voucherType}} Report</h1>
-                   
-                    <h4 style="margin-top:-5px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</h4>
+                    <h1 class="companyName">{{CompanyName}}</h1>
+                    <p style="margin-top: -15px;" class="companyName2">{{CompanyName2}}</p>
+                    <p class="rptTitle" style="margin-top:-25px"> {{voucherType}} Report</p>
+                    <p style="margin-top:-20px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</p>
                   
                 </span>
                 <span>
