--- a/src/app/Reports/ledger/ledger.component.html
+++ b/src/app/Reports/ledger/ledger.component.html
@@ -53,36 +53,33 @@
            <div class="hide">
             <div class="text-center border-bottom d-flex justify-content-between">
                 <span>
-                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="150"
-                        width="150">
+                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100" width="100">
                 </span>
-                <span class="mt-3">
+                <span >
                     
 
-                    <h1 >{{CompanyName}}</h1>
-                    <h5 style="margin-top: -15px;" class="text-end">{{CompanyName2}}</h5>
+                    <h1 class="companyName">{{CompanyName}}</h1>
+                    <p style="margin-top: -15px;" class="companyName2">{{CompanyName2}}</p>
 
-                    <h1>Ledger Report</h1>
-                    <h3 style="margin-top:-10px">{{curCOATitle}}</h3>
-                    <h4 style="margin-top:-5px"><b>From:</b> {{startDate | date:'yyyy-MM-dd'}} <b>To:</b> {{EndDate | date:'yyyy-MM-dd'}}</h4>
+                    <p class="rptTitle" style="margin-top:-25px">Ledger Report {{curCOATitle}}</p>
+                    <p style="margin-top:-20px"><b>From:</b> {{startDate | date:'yyyy-MM-dd'}} <b>To:</b> {{EndDate | date:'yyyy-MM-dd'}}</p>
                   
                 </span>
                 <span>
-                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="150"
-                        width="150">
+                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100" width="100">
                 </span>
         
         
             </div>
            </div>
 
-            <table class="table mt-3">
+            <table class="table">
 
                 <thead >
                     <tr class="text-center">
                         <th class="col-lg-1 col-md-1 col-sm-1 col-xs-1">S#</th>
                         <th class="col-lg-1 col-md-1 col-sm-1 col-xs-1">Date</th>
-                        <th class="col-lg-1 col-md-1 col-sm-1 col-xs-1">Invoice No</th>
+                        <th class="col-lg-1 col-md-1 col-sm-1 col-xs-1">Inv #</th>
                         <th class="col-lg-2 col-md-2 col-sm-2 col-xs-2">Particular</th>
                         <th class="col-lg-3 col-md-3 col-sm-3 col-xs-3">Narration</th>
                         <th class="col-lg-1 col-md-1 col-sm-1 col-xs-1 text-end">Debit</th>
