--- a/src/app/Reports/owners-report/owners-report.component.html
+++ b/src/app/Reports/owners-report/owners-report.component.html
@@ -11,16 +11,16 @@
                <div class="hide">
                 <div class="text-center border-bottom d-flex justify-content-between pb-1">
                     <span>
-                        <img src="{{logo}}"  alt="" srcset="" height="150"
-                            width="150">
+                        <img src="{{logo}}"  alt="" srcset="" height="100"
+                            width="100">
                     </span>
-                    <span class="mt-3">
+                    <span >
                         
     
-                        <h1>{{CompanyName}}</h1>
-                        <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
+                        <h1 class="companyName">{{CompanyName}}</h1>
+                        <p   class="companyName2">{{CompanyName2}}</p>
     
-                        <h1>List Of Owners</h1>
+                        <p class="rptTitle" style="margin-top: -25px;">List Of Owners</p>
                     </span>
                     <span>
                         <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="150"
