--- a/src/app/Reports/plstat/plstat.component.html
+++ b/src/app/Reports/plstat/plstat.component.html
@@ -4,14 +4,14 @@
             <div class=" container-fluid ">
                 <div class="selrow row text-center">
          
-                        <mat-form-field class="w-25 " >
+                        <mat-form-field class="col-lg-4" appearance="outline" >
                             <mat-label>From Date</mat-label>
                             <input matInput type="text"  readonly="true" [(ngModel)]="fromDate" [matDatepicker]="startDate">
                             <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
                             <mat-datepicker #startDate></mat-datepicker>
                         </mat-form-field>
 
-                        <mat-form-field class="w-25">
+                        <mat-form-field class="col-lg-4" appearance="outline">
                             <mat-label>To Date</mat-label>
                             <input matInput type="text" readonly="true" [(ngModel)]="toDate"  [matDatepicker]="EndDate">
                             <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
@@ -19,9 +19,9 @@
                         </mat-form-field>
                     
 
-                    <div class="w-50  ">
-                        <button class="btn btn-primary w-25 btn-rpt me-2" (click)="getReport('R1')" >
-                            Summary 1
+                    <div class="col-lg-3">
+                        <button class="btn btn-success w-50 btn-rpt me-1" (click)="getReport('R1')" >
+                            Get Report
                         </button>   
                         <!-- <button class=" btn btn-primary w-25 btn-rpt me-2" (click)="getReport('R2')" >
                             Summary 2
@@ -48,11 +48,11 @@
                     <span class="mt-3">
                         
     
-                        <h3 class="rpt-cmpny">{{CompanyName}}</h3>
-                        <p style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</p>
+                        <h3 class="companyName">{{CompanyName}}</h3>
+                        <p style="margin-top: -15px;" class="companyName2">{{CompanyName2}}</p>
     
-                        <h4 style="margin-top: -15px;" class="rpt-title">Profit & Loss Statement</h4>
-                        <p style="margin-top: -10px;"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</p>
+                        <p style="margin-top: -25px;" class="rptTitle">Profit & Loss Statement</p>
+                        <p style="margin-top: -20px;"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</p>
                       
                     </span>
                     <span>
@@ -125,7 +125,7 @@
 
                 <!---------------- Profit & Loss Calculation ------------------>
                 <tr>
-                    <th colspan="3" *ngIf="(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) > 0">NET PROFIT</th>
+                    <th colspan="3" *ngIf="(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) >= 0">NET PROFIT</th>
                     <th colspan="3" *ngIf="(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) < 0">NET LOSS</th>
                     
                     <th colspan="1">{{(incCreditTotal - incDebitTotal ) - (expDebitTotal - expCreditTotal) |number }}</th>
