--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,19 +5,24 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
+
+.body {
     display: flex;
     justify-content: right;
     align-items: center;
     // min-height: 100vh;
     background-size:100px;
-     background-image: url(../../assets/Images/bckgrnd3.jpg);
+     background-image: url(../../assets/Images/BGReception.jpg);
+   
+     
+    
      
   
-    background-position:left;
+    background-position:bottom;
     
-    background-repeat:space;
-    background-size:cover;
+    background-repeat:no-repeat;
+    background-size:cover ;
+    
     
   
 }
