--- a/src/app/Components/Navigation/top-navbar/top-navbar.component.html
+++ b/src/app/Components/Navigation/top-navbar/top-navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="w-100">
 
-
+<!-- 
   <mat-toolbar-row>
 
 
@@ -18,7 +18,7 @@
       <a class="list-itm" routerLink="./bdgtng" routerLinkActive="active">
         Budgeting</a>
 
-    <a class="list-itm" routerLink="./spvsb" routerLinkActive="active">
+    <a class="list-itm" routerLink="./spv" routerLinkActive="active">
       Supervision</a>
     <a class="list-itm" routerLink="./Dtranrpt" routerLinkActive="active">
       Day Transaction</a>
@@ -76,9 +76,9 @@
 
 
 
-  </mat-toolbar-row>
+  </mat-toolbar-row> -->
 
-  <!-- 
+  
      <mat-toolbar-row >
       
       <span *ngFor="let item of menuList; let i = index">
@@ -110,6 +110,6 @@
 
     
 
-    </mat-toolbar-row>  -->
+    </mat-toolbar-row> 
 
 </mat-toolbar>
