--- a/src/app/Components/check-inout/cio-details/cio-details.component.html
+++ b/src/app/Components/check-inout/cio-details/cio-details.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-3">
+<div class="container-fluid p-3" style="overflow-y: scroll;">
     
     <div class="d-flex justify-content-between cursorPointer p-2 border-bottom">
         <p class="dialogueTitle">CIO Voucher Details</p>
@@ -31,6 +31,14 @@
         <span class="w-50 row ">
             <h5 class="w-50 fw-bold border-dark">Customer Name:</h5>
             <p class="w-50">{{lblPartyName }}</p>
+        </span>
+        <span class="w-50 row ">
+            <h5 class="w-50 fw-bold border-dark">Customer CNIC:</h5>
+            <p class="w-50">{{lblPartyCNIC }}</p>
+        </span>
+        <span class="w-50 row ">
+            <h5 class="w-50 fw-bold border-dark">Customer CNIC:</h5>
+            <p class="w-50">{{lblPartyMobileno }}</p>
         </span>
 
         
@@ -102,6 +110,38 @@
     </table>
 </div>
 
+<div>
+    <div class="text-center border border-dark">
+        <h3 >Payment Details</h3>
+    </div>
+
+    <table class="table">
+  
+        <thead>
+            <th>S#</th>
+            <th>Date</th>
+            <th class="col-lg-4">Remarks</th>
+            <th>Amount</th>
+            
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of paymentHistoryList index as index">
+                <td>{{index+1}}</td>
+                <td>{{item.paymentDate |date:'yyyy-MM-dd'}}</td>
+                <td>{{item.cioRemarks}}</td>
+                <td>{{item.paymentAmount | number}}</td>
+                
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+                <th>{{paymentAmountTotal |number}}</th>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
 
 
    
@@ -109,6 +149,8 @@
         <h4 class="w-75 fw-bold border-dark">Total</h4>
         <h4 class="w-25 text-end">{{lblRentPerDay * lblTotalDays + lblServicesAmount |number}}</h4>
     </span>
+
+   
 
     <span class="w-100 text-end row border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false" >
         <h4 class="w-75 fw-bold border-dark">Discount</h4>
@@ -118,6 +160,11 @@
     <span class="w-100 text-end row  border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false">
         <h4 class="w-75 fw-bold border-dark">Net Total</h4>
         <h4 class="w-25 text-end">{{(lblRentPerDay * lblTotalDays + lblServicesAmount) - lblDiscount|number}}</h4>
+    </span>
+
+    <span class="w-100 text-end row border-bottom border-dark mb-1" *ngIf="lblActiveStatus == true" >
+        <h4 class="w-75 fw-bold border-dark">Received</h4>
+        <h4 class="w-25 text-end">{{paymentAmountTotal|number}}</h4>
     </span>
     
 </div>
