--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -96,37 +96,41 @@
     
 
 
-<div class="row container-fluid p-3">
+<div class="row container-fluid p-4">
+
+    <!-- <div class="col-md-12 mb-2">
+        <div class="mt-2">
+            <div class="mat-elevation-z2" [chart]="room_Booking_Chart"></div>
+          </div>
+
+    </div> -->
+
     <div class="col-md-8 ">
-        <div >
+       
             <div class="mb-1 mat-elevation-z2" [chart]="income_expense_chart"></div>
-          </div>
-          <!-- <div >
-            <div class="mat-elevation-z2" [chart]="profit_loss_chart"></div>
-          </div>
-         -->
           
     </div>
     
     <div class="col-md-4">
-        <div >
+       
             <div class="mat-elevation-z2" [chart]="prvious_Income_Detail_Chart"></div>
-          </div>
+          
 
     </div>
-    <div class="col-md-8">
-        <div class="mt-2">
-            <div class="mat-elevation-z2" [chart]="budget_Chart"></div>
-          </div>
-
-    </div>
-    <div class="col-md-4">
-        <div class="mt-2">
-            <div class="mat-elevation-z2" [chart]="Income_Detail_Chart"></div>
-          </div> 
+    <div class="col-md-8 mt-2">
         
+            <div class="mat-elevation-z2" [chart]="budget_Chart"></div>
+         
 
     </div>
+    <div class="col-md-4 mt-2">
+       
+            <div class="mat-elevation-z2" [chart]="Income_Detail_Chart"></div>       
+
+    </div>
+
+
+ 
 
 
     
