--- a/src/app/Components/check-inout/check-inout.component.html
+++ b/src/app/Components/check-inout/check-inout.component.html
@@ -519,10 +519,12 @@
                     <h4 class="w-25 text-end">{{lblRentPerDay * lblTotalDays + lblServicesAmount |number}}</h4>
                 </span>
 
-                <span class="row text-end  border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false">
-                    <h4 class="w-75 fw-bold ">Discount</h4>
-                    <h4 class="w-25 text-end">{{lblDiscount|number}}</h4>
-                </span>
+                <div *ngIf=" lblDiscount != 0">
+                    <span class="row text-end  border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false">
+                        <h4 class="w-75 fw-bold ">Discount</h4>
+                        <h4 class="w-25 text-end">{{lblDiscount|number}}</h4>
+                    </span>
+                </div>
 
                 <span class="row text-end   border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false">
                     <h4 class="w-75 fw-bold ">Net Total</h4>
