--- a/src/app/Components/check-inout/cio-details/cio-details.component.html
+++ b/src/app/Components/check-inout/cio-details/cio-details.component.html
@@ -110,7 +110,7 @@
     </table>
 </div>
 
-<div>
+<div *ngIf="paymentHistoryList != []">
     <div class="text-center border border-dark">
         <h3 >Payment Details</h3>
     </div>
@@ -119,6 +119,7 @@
   
         <thead>
             <th>S#</th>
+            <th>Inv #</th>
             <th>Date</th>
             <th class="col-lg-4">Remarks</th>
             <th>Amount</th>
@@ -127,13 +128,14 @@
         <tbody>
             <tr *ngFor="let item of paymentHistoryList index as index">
                 <td>{{index+1}}</td>
+                <td>{{item.invoiceNo}}</td>
                 <td>{{item.paymentDate |date:'yyyy-MM-dd'}}</td>
                 <td>{{item.cioRemarks}}</td>
                 <td>{{item.paymentAmount | number}}</td>
                 
             </tr>
             <tr>
-                <td colspan="3"></td>
+                <td colspan="4"></td>
                 <th>{{paymentAmountTotal |number}}</th>
             </tr>
         </tbody>
